tests/frontend/fail/two_behaviours.act
contract C

// This is wrong because we have two behviours with the same name
constructor
interface constructor(uint24 _x)

creates

  uint24 x := _x

transition increase
interface increase(uint24 new_x)

  storage
    x

  returns pre(x)

ensures

  post(x) >= pre(x)

transition increase
interface increase2(uint24 new_x)

storage
    x

  returns new_x

ensures

  post(x) >= pre(x)

